--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,22 +5,22 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: hsl(185, 41%, 84%);
+    --foreground: hsl(183, 100%, 15%);
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: small;
+}
+
+input {
+  color: hsl(183, 100%, 15%);
+  background-color:  hsl(189, 47%, 97%);
+  font-size: 24px;
+  text-align: end;
 }
